assets/css/theme.css
/* ... */
.scrolloff {
    width: 280px;
    height: 250px;
}

/* top menu */
.contact-menu {
    border: 1px solid orangered;
    margin-left:10px;
    padding-left: 1px;
    padding-right: 1px;
    border-radius: 6px;
}

.site-header .navbar-nav>li.contact-menu:last-child:not(.quote-btn) {
    margin-right: 10px;
}


@media only screen and (max-width: 991px) {
    .navbar .navbar-nav li.contact-menu a.nav-link {
        padding: 0 5px;
    }

    .site-header .navbar-nav>li.contact-menu:last-child:not(.quote-btn) {
        margin-bottom: 15px;
    }
}

@media only screen and (max-width: 767px) {
    .navbar .navbar-nav li.contact-menu a.nav-link {
        padding: 0 7px;
    }
}

.navbar-nav>li.contact-menu:hover {
    background-color: orangered;
}

.navbar .navbar-nav>li.contact-menu>a.nav-link:hover {
    color: #333333;
}

.navbar .navbar-nav>li>a.nav-link{
    padding-top:0;
    padding-bottom:0;
}

/* scroll  */
.site-header .scroll-down {
    font-size: 14px;
    background-color: transparent;
    color: white;
    padding: 10px;
}

.section-pad.nopb {
    padding-bottom: 225px;
}

/* expertise icon */
.expertise-icon {
    font-size:3em;
    color:orangered;
    text-align: center;
    margin-top: 50px;
}

.partner-image {
    max-height:180px;
    max-width: 180px;
}

/* team linkedin  */
.team-member .team-social li a:hover {
    color: #16a3fe;
}

/* footer image */
.footer-logo {
    width: 180px;
    margin-left: -10px;
}


/* landing background  */
@media (min-width: 769px) {
.io-azure .banner {
    /*background: url("../images/header-overlay.png") 0 0 no-repeat,url("../../images/header-background.jpg") 0 0 no-repeat;*/
    background: url("../../images/header-background.jpg") 0% 0% no-repeat;
    background-size: cover;
}
}
@media (max-width: 768px) {
.io-azure .banner {
  background: url('../../images/header-background-small.jpg') 25% 25% no-repeat;
    background-size: cover;
  }
}

/* scroll to top button */
#scrollTopBtn {
    display: none;
    height: 40px;
    width: 40px;
    position: fixed;
    bottom: 20px;
    right: 30px;
    z-index: 99;
    border: none;
    outline: none;
    background-color: orangered;
    color: #ffffff;
    cursor: pointer;
    border-radius: 4px;
}

#scrollTopBtn:hover {
    background-color: #555;
}

/*! END */

